# sqlalchemy-14-to-20-codemod

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml  wrangler.jsonc
artifacts/: demo-migration-report.json
docs/: autonomous-product-wells.md  backlog.md  claims-safeguards.md  commercial-benchmark.md  commercial-case.md  company-setup.md  comparison.md  demo.md  deployment.md  discovery-playbook.md  discussion-replies.md  distribution-playbook.md  fulfillment.md  funnel-fix-todo.md  kpi-dashboard.md  launch-log.md  launch-posts.md  launch-readiness.md  lead-tracker.md  legal-checklist.md  license-terms.md  limitations.md  live-site-funnel-fix-todo.md  market-selection.md  max-revenue-todo.md  open-source-split.md  packaging.md  paid-product-checklist.md  payhip-webhook.md  preset-bundle-checklist.md  pricing.md  privacy-policy.md  product-ideas.txt  product-spec.md  product-wells-overhaul-todo.md  product-wells-todo.md  public-proof.md  quickstart.md  ranks-3-6-product-task-list.md  refund-policy.md  (+10 more)
fixtures/demo_repo/: .gitignore  pyproject.toml
fixtures/demo_repo/src/demo_repo/: legacy_queries.py  models.py
fixtures/demo_repo/tests/: test_legacy_queries.py
fixtures/legacy_sa14_shop_repo/: README.md  pyproject.toml
fixtures/legacy_sa14_shop_repo/src/legacy_shop/: __init__.py  models.py  reports.py
fixtures/legacy_sa14_shop_repo/tests/: test_reports.py
products/cra-evidence-builder/: README.md  pyproject.toml
products/cra-evidence-builder/docs/: commercial-case.md  product-spec.md  public-proof.md
products/cra-evidence-builder/fixtures/broken_manifest_product/: package.json
products/cra-evidence-builder/fixtures/clean_product/: CHANGELOG.md  Dockerfile  SECURITY.md  package.json
products/cra-evidence-builder/fixtures/clean_product/docs/: incident-response.md
products/cra-evidence-builder/fixtures/risky_product/: package.json
products/cra-evidence-builder/src/cra_evidence_builder/: __init__.py  cli.py  discovery.py  models.py  reporting.py  rules.py  scanner.py  templates.py
products/cra-evidence-builder/tests/: test_scanner.py
products/eslint-v10-radar/: README.md  pyproject.toml
products/eslint-v10-radar/docs/: commercial-case.md  product-spec.md  public-proof.md
products/eslint-v10-radar/fixtures/broken_package_repo/: package.json
products/eslint-v10-radar/fixtures/clean_repo/: eslint.config.js  package.json
products/eslint-v10-radar/fixtures/risky_repo/: .eslintrc.js  package.json
products/eslint-v10-radar/fixtures/risky_repo/src/: lint-api.js
products/eslint-v10-radar/src/eslint_v10_radar/: __init__.py  cli.py  discovery.py  models.py  patching.py  reporting.py  rules.py  scanner.py
products/eslint-v10-radar/tests/: test_scanner.py
products/pydantic-v2-porter/: AGENTS.md  README.md  demo-report.json  pyproject.toml
products/pydantic-v2-porter/docs/: commercial-case.md  product-spec.md  public-proof.md
products/pydantic-v2-porter/fixtures/alias_import_repo/: models.py
products/pydantic-v2-porter/fixtures/pre_validator_repo/: models.py
products/pydantic-v2-porter/fixtures/pydantic_v1_import_repo/: models.py
products/pydantic-v2-porter/fixtures/root_before_repo/: models.py
products/pydantic-v2-porter/fixtures/settings_repo/: settings.py
products/pydantic-v2-porter/fixtures/simple_repo/: models.py
products/pydantic-v2-porter/fixtures/unsupported_config_repo/: models.py
products/pydantic-v2-porter/fixtures/unsupported_each_item_repo/: models.py
products/pydantic-v2-porter/fixtures/unsupported_root_after_repo/: models.py
products/pydantic-v2-porter/fixtures/unsupported_values_repo/: models.py
products/pydantic-v2-porter/src/pydantic_v2_porter/: build_runner.py  cli.py  diffing.py  discovery.py  models.py  runner.py  transformer.py
products/pydantic-v2-porter/tests/: test_runner.py
products/python-314-readiness/: .gitignore  README.md  pyproject.toml
products/python-314-readiness/docs/: commercial-case.md  product-spec.md  public-proof.md
products/python-314-readiness/fixtures/broken_python_repo/: pyproject.toml
products/python-314-readiness/fixtures/broken_python_repo/src/broken_app/: broken.py
products/python-314-readiness/fixtures/clean_repo/: pyproject.toml
products/python-314-readiness/fixtures/clean_repo/.github/workflows/: ci.yml
products/python-314-readiness/fixtures/clean_repo/src/clean_app/: models.py
products/python-314-readiness/fixtures/old_pydantic_v2_repo/: pyproject.toml
products/python-314-readiness/fixtures/old_pydantic_v2_repo/src/old_app/: app.py
products/python-314-readiness/fixtures/risky_repo/: pyproject.toml
products/python-314-readiness/fixtures/risky_repo/.github/workflows/: ci.yml
products/python-314-readiness/fixtures/risky_repo/src/risky_app/: models.py
products/python-314-readiness/src/python314_readiness/: __init__.py  build_runner.py  cli.py  discovery.py  models.py  patching.py  reporting.py  rules.py  scanner.py
products/python-314-readiness/tests/: test_scanner.py
scripts/: audit_site_urls.py  audit_stripe_checkout.mjs  build_site.py  cloudflare_traffic_snapshot.mjs  release_bundles.py  search_console_opportunities.py  site_catalog.py  submit_indexnow.py  verify_live_funnel.py
site/: 404.html  _headers  _redirects  _site_manifest.json  app.js  cancel.html  config.example.js  config.js  demo.html  index.html  policies.html  pricing.html  product_catalog.mjs  pydantic-basesettings-migration.html  pydantic-root-validator-pre-migration.html  pydantic-v2-migration-pack.html  pydantic-validator-v2-migration.html  robots.txt  scan.html  site.webmanifest  sitemap-hubs.xml  sitemap-pages.xml  sitemap-problem-pages.xml  sitemap-products.xml  sitemap.xml  sqlalchemy-14-to-20-migration-pack.html  sqlalchemy-declarative-import-migration.html  sqlalchemy-engine-execute-removed.html  sqlalchemy-insert-values-migration.html  sqlalchemy-joinedload-all-migration.html  sqlalchemy-joinedload-string-migration.html  sqlalchemy-migration-tool.html  sqlalchemy-preset-bundle.html  sqlalchemy-query-get-migration.html  sqlalchemy-select-list-migration.html  (+4 more)
(+195 files in other folders)
