[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sa20-pack"
version = "0.1.0"
description = "A zero-cost SQLAlchemy 1.4 to 2.0 migration codemod pack"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex" },
]
dependencies = [
  "libcst>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "hatchling>=1.27.0",
  "mypy==1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
  "SQLAlchemy>=2.0.48",
]

[project.scripts]
sa20-pack = "sa20_pack.cli:main"
sa20-pack-launch-check = "sa20_pack.launch_readiness:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sa20_pack"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  "artifacts",
  "test_runs",
  "sa20_tmp",
  ".pytest_tmp",
  "pytest_tmp",
  "mypy_cache",
  "pycache",
  "ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.sa20_pack.validation]
format = ["python", "-m", "ruff", "format", ".", "--check", "--no-cache"]
typecheck = ["python", "-m", "mypy", "src", "tests"]
build = ["python", "-m", "sa20_pack.build_runner"]
test = ["python", "-m", "pytest", "-p", "no:cacheprovider"]
