[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-repo"
version = "0.0.1"
description = "Demo SQLAlchemy repo for sa20-pack"
requires-python = ">=3.10"
dependencies = ["SQLAlchemy>=2.0.48"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["misc", "valid-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.sa20_pack.validation]
format = ["python", "-m", "ruff", "format", "."]
typecheck = ["python", "-m", "mypy", "src", "tests"]
build = ["python", "-m", "sa20_pack.build_runner"]
test = ["python", "-m", "pytest", "-q", "-p", "no:cacheprovider"]
