[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "python-314-readiness"
version = "0.1.0"
description = "A local Python 3.14 readiness scanner, report generator, and CI patch previewer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zipper Tools" }]
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "hatchling>=1.27.0",
  "mypy==1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[project.scripts]
python-314-readiness = "python314_readiness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/python314_readiness"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["fixtures/broken_python_repo"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
